added handler and tests for PRAK25-13 DELETE Pokemon and PRAK25-14 PUT Edit pokemon, also added sortingorder for GET-results to paths and handler
