# api/swagger.yml
@@ -317,6 +317,13 @@ paths:
         description: number of pokemon to skip before returning results
         name: offset
         in: query
+      - enum:
+        - asc
+        - desc
+        type: string
+        description: order for the results ("asc" ascending, "desc" descending)
+        name: sortOrder
+        in: query
       responses:
         "200":
           description: search results for pokemon
@@ -407,6 +414,13 @@ paths:
         default: 0
         description: number of pokemon to skip before returning results
         name: offset
+        in: query
+      - enum:
+        - asc
+        - desc
+        type: string
+        description: order for the results ("asc" ascending, "desc" descending)
+        name: sortOrder
         in: query
       responses:
         "200":
