# internal/api/handlers/pokemon/get_pokemon.go
@@ -2,6 +2,7 @@ package pokemon
 
 import (
 	"net/http"
+	"sort"
 	"strconv"
 
 	"github.com/ansiegl/Pok-Nest.git/internal/api"
@@ -91,6 +92,13 @@ func getPokemonHandler(s *api.Server) echo.HandlerFunc {
 			legendary = legendaryStr == "true"
 		}
 
+		// get sortOrder from request (asc or desc)
+		sortOrder := c.QueryParam("sortOrder")
+		if sortOrder != "asc" && sortOrder != "desc" && sortOrder != "" {
+			log.Debug().Str("sortOrder", sortOrder).Msg("Invalid sortOrder parameter")
+			return c.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid sortOrder parameter. Allowed values are 'asc' or 'desc'."})
+		}
+
 		// get all pokemons
 		pokemons, err := models.Pokemons().All(ctx, s.DB)
 		if err != nil {
@@ -123,6 +131,19 @@ func getPokemonHandler(s *api.Server) echo.HandlerFunc {
 
 			// add pokemon to filtered list
 			filteredPokemons = append(filteredPokemons, *p)
+		}
+
+		// Sort the filteredPokemons based on sortOrder
+		if sortOrder == "asc" {
+			// Ascending sort by Name (you can change to another field like Generation if needed)
+			sort.Slice(filteredPokemons, func(i, j int) bool {
+				return filteredPokemons[i].Name < filteredPokemons[j].Name
+			})
+		} else if sortOrder == "desc" {
+			// Descending sort by Name (you can change to another field like Generation if needed)
+			sort.Slice(filteredPokemons, func(i, j int) bool {
+				return filteredPokemons[i].Name > filteredPokemons[j].Name
+			})
 		}
 
 		// pagination logic
